--- a/package.json
+++ b/package.json
@@ -46,10 +46,12 @@
     "date-fns": "^4.1.0",
     "jose": "^5.9.6",
     "lucide-react": "^0.453.0",
+    "nanoid": "^5.1.6",
     "next": "^15.5.9",
     "next-themes": "^0.4.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "swr": "^2.3.8",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "tweetnacl": "^1.0.3",
