--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "nanoid": "^5.1.6",
     "next": "^15.5.9",
     "next-themes": "^0.4.3",
+    "privacycash": "^1.1.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "swr": "^2.3.8",
